# mr_kb

./: .gitignore  MANIFEST.in  README.md  __init__.py  chat_utils.py  error.txt  implementation_plan.md  plugin_info.json  pyproject.toml  requirements.txt  setup.py  test_kb.py  utils.py  vector_only_kb.py
backup/: bm25_only_kb.py  hierarchical_based.py  minimal_test.py
data/: test.docx  test.xlsx
src/backup_mr_kb/: file_handlers.py  kb.py  mod.py  router.py  test_plugin.py  text_extractor.py  url_fetcher.py  vector_only_kb.py
src/backup_mr_kb/keyword_matching/: config.py  enhanced_matching.py  score_scaling.py
src/backup_mr_kb/static/: README.md  insertadmin.js
src/backup_mr_kb/static/js/: csv-kb-viewer.js  file-uploader.js  kb-manager.js  kb-settings.js
src/mr_kb/: __init__.py  chat_utils.py  csv_handler.py  csv_parser.py  file_handlers.py  hf.py  kb.py  kb_transfer.py  mod.py  portable.py  router.py  test_plugin.py  url_fetcher.py  vector_only_kb.py  vector_only_kb.py.bak
src/mr_kb/backup/: csv_handler.py  csv_handler3.py  csv_handler_get_update_chroma.py  csv_handler_mostly_working.py  kb.py  kbnew.py  kbnew2.py  kbnew3.py  kbnew4.py  kbnew5.py  kbnew6.py
src/mr_kb/inject/: admin.jinja2
src/mr_kb/keyword_matching/: README.md  __init__.py  config.py  enhanced_matching.py  score_scaling.py
src/mr_kb/static/: insertadmin.js
src/mr_kb/static/css/: file-uploader.css
src/mr_kb/static/js/: csv-config.js  csv-viewer.js  kb-manager-csv.js  kb-manager.js  kb-settings.js
storage/: docstore.json  index_store.json
