[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mr_kb"
version = "0.1.0"
description = "A hierarchical knowledge base plugin for MindRoot"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "llama-index",
    "python-dotenv>=0.19.0",
    "openai>=1.0.0",
    "nltk>=3.6.0",
    "python-magic>=0.4.24",
    "tiktoken>=0.5.0",
    "rank_bm25>=0.2.2",
    "pypdf",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "python-docx>=0.8.11"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
